src/openim_sdk_ffi.h

extern void RefuseGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void SetGroupMemberNickname(char* operationID, char* groupID, char* userID, char* groupMemberNickname);
extern void SearchGroupMembers(char* operationID, char* searchParam);
// //////////////////////////friend/////////////////////////////////////
//
extern void GetDesignatedFriendsInfo(char* operationID, char* userIDList);
extern void GetFriendList(char* operationID);
extern void SearchFriends(char* operationID, char* searchParam);
extern void CheckFriend(char* operationID, char* userIDList);
extern void AddFriend(char* operationID, char* userIDReqMsg);
extern void SetFriendRemark(char* operationID, char* userIDRemark);
extern void DeleteFriend(char* operationID, char* friendUserID);
extern void GetRecvFriendApplicationList(char* operationID);
extern void GetSendFriendApplicationList(char* operationID);
extern void AcceptFriendApplication(char* operationID, char* userIDHandleMsg);
extern void RefuseFriendApplication(char* operationID, char* userIDHandleMsg);
extern void AddBlack(char* operationID, char* blackUserID);
extern void GetBlackList(char* operationID);
extern void RemoveBlack(char* operationID, char* removeUserID);
extern void GetAllConversationList(char* operationID);
extern void GetConversationListSplit(char* operationID, int32_t offset, int32_t count);
extern void GetOneConversation(char* operationID, int sessionType, char* sourceID);
extern void GetMultipleConversation(char* operationID, char* conversationIDList);
extern void SetOneConversationPrivateChat(char* operationID, char* conversationID, _Bool isPrivate);
extern void SetOneConversationBurnDuration(char* operationID, char* conversationID, int32_t burnDuration);