lib/openim_sdk_ffi_bindings_generated.dart


  late final _RefuseGroupApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('RefuseGroupApplication');
  late final _RefuseGroupApplication = _RefuseGroupApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGroupMemberNickname(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> groupMemberNickname,
  ) {
    return _SetGroupMemberNickname(
      operationID,
      groupID,
      userID,
      groupMemberNickname,
    );
  }

  late final _SetGroupMemberNicknamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetGroupMemberNickname');
  late final _SetGroupMemberNickname = _SetGroupMemberNicknamePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchGroupMembers(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroupMembers(
      operationID,
      searchParam,
    );
  }

  late final _SearchGroupMembersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SearchGroupMembers');
  late final _SearchGroupMembers = _SearchGroupMembersPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// //////////////////////////friend/////////////////////////////////////
  void GetDesignatedFriendsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetDesignatedFriendsInfo(
      operationID,
      userIDList,
    );
  }

  late final _GetDesignatedFriendsInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetDesignatedFriendsInfo');
  late final _GetDesignatedFriendsInfo =
      _GetDesignatedFriendsInfoPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetFriendList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetFriendList(
      operationID,
    );
  }

  late final _GetFriendListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetFriendList');
  late final _GetFriendList =
      _GetFriendListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void SearchFriends(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchFriends(
      operationID,
      searchParam,
    );
  }

  late final _SearchFriendsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SearchFriends');
  late final _SearchFriends = _SearchFriendsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void CheckFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _CheckFriend(
      operationID,
      userIDList,
    );
  }

  late final _CheckFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CheckFriend');
  late final _CheckFriend = _CheckFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void AddFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDReqMsg,
  ) {
    return _AddFriend(
      operationID,
      userIDReqMsg,
    );
  }

  late final _AddFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('AddFriend');
  late final _AddFriend = _AddFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetFriendRemark(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDRemark,
  ) {
    return _SetFriendRemark(
      operationID,
      userIDRemark,
    );
  }

  late final _SetFriendRemarkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetFriendRemark');
  late final _SetFriendRemark = _SetFriendRemarkPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> friendUserID,
  ) {
    return _DeleteFriend(
      operationID,
      friendUserID,
    );
  }

  late final _DeleteFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('DeleteFriend');
  late final _DeleteFriend = _DeleteFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetRecvFriendApplicationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetRecvFriendApplicationList(
      operationID,
    );
  }

  late final _GetRecvFriendApplicationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetRecvFriendApplicationList');
  late final _GetRecvFriendApplicationList = _GetRecvFriendApplicationListPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetSendFriendApplicationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetSendFriendApplicationList(
      operationID,
    );
  }

  late final _GetSendFriendApplicationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetSendFriendApplicationList');
  late final _GetSendFriendApplicationList = _GetSendFriendApplicationListPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void AcceptFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _AcceptFriendApplication(
      operationID,
      userIDHandleMsg,
    );
  }

  late final _AcceptFriendApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AcceptFriendApplication');
  late final _AcceptFriendApplication = _AcceptFriendApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RefuseFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _RefuseFriendApplication(
      operationID,
      userIDHandleMsg,
    );
  }

  late final _RefuseFriendApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('RefuseFriendApplication');
  late final _RefuseFriendApplication = _RefuseFriendApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void AddBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> blackUserID,
  ) {
    return _AddBlack(
      operationID,
      blackUserID,
    );
  }

  late final _AddBlackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('AddBlack');
  late final _AddBlack = _AddBlackPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetBlackList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetBlackList(
      operationID,
    );
  }

  late final _GetBlackListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetBlackList');
  late final _GetBlackList =
      _GetBlackListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void RemoveBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> removeUserID,
  ) {
    return _RemoveBlack(
      operationID,
      removeUserID,
    );
  }

  late final _RemoveBlackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('RemoveBlack');
  late final _RemoveBlack = _RemoveBlackPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetAllConversationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetAllConversationList(
      operationID,
    );
  }

  late final _GetAllConversationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetAllConversationList');
  late final _GetAllConversationList = _GetAllConversationListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  void GetConversationListSplit(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _GetConversationListSplit(
      operationID,
      offset,
      count,
    );
  }

  late final _GetConversationListSplitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32,
              ffi.Int32)>>('GetConversationListSplit');
  late final _GetConversationListSplit = _GetConversationListSplitPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void GetOneConversation(
    ffi.Pointer<ffi.Char> operationID,
    int sessionType,
    ffi.Pointer<ffi.Char> sourceID,
  ) {
    return _GetOneConversation(
      operationID,
      sessionType,
      sourceID,
    );
  }

  late final _GetOneConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('GetOneConversation');
  late final _GetOneConversation = _GetOneConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  void GetMultipleConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
  ) {
    return _GetMultipleConversation(
      operationID,
      conversationIDList,
    );
  }

  late final _GetMultipleConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetMultipleConversation');
  late final _GetMultipleConversation = _GetMultipleConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetOneConversationPrivateChat(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool isPrivate,
  ) {
    return _SetOneConversationPrivateChat(
      operationID,
      conversationID,
      isPrivate,
    );
  }

  late final _SetOneConversationPrivateChatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('SetOneConversationPrivateChat');
  late final _SetOneConversationPrivateChat =
      _SetOneConversationPrivateChatPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void SetOneConversationBurnDuration(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    int burnDuration,
  ) {
    return _SetOneConversationBurnDuration(
      operationID,
      conversationID,
      burnDuration,
    );
  }
